--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.0.0+2
   curved_navigation_bar: ^1.0.3
+  font_awesome_flutter: ^10.3.0
   
 
 dev_dependencies:
