--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.medicine_finder">
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
    <application
         android:label="medicine_finder"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+            
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,5 +35,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <meta-data android:name = "com.google.android.geo.API_KEY"
+            android:value = "AIzaSyDoR83pkKYmuS6nHWU-Fk4F2uCd2K5ZV0g"/>
+            
     </application>
 </manifest>
