--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   curved_navigation_bar: ^1.0.3
   font_awesome_flutter: ^10.3.0
+  location: ^4.4.0
+  geolocator: ^9.0.2
   
 
 dev_dependencies:
