--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   iconify_flutter: ^0.0.5
   google_maps_flutter: ^2.2.2
   mime: ^1.0.3
-  json_serializable: ^6.5.4
+  json_serializable: ^4.1.4
   shared_preferences: ^2.0.15
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.0.0+2
@@ -53,6 +53,8 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   location: ^4.4.0
   geolocator: ^9.0.2
+  json_annotation: ^4.0.1
+  dio_http_cache: ^0.3.0
   
 
 dev_dependencies:
@@ -60,7 +62,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  build_runner: ^2.3.3
+  build_runner: ^2.1.10
   
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
