--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   json_annotation: ^4.0.1
   dio_http_cache: ^0.3.0
   http: ^0.13.5
+  modal_bottom_sheet: ^2.1.2
   
 
 dev_dependencies:
